--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,18 @@
-streamlit>=1.28.0
+# Core web framework
+dash>=2.14.0
+dash-bootstrap-components>=1.5.0
+
+# Data manipulation and analysis
 pandas>=2.0.0
 numpy>=1.24.0
+
+# Visualization
 matplotlib>=3.7.0
 plotly>=5.15.0
+kaleido>=0.2.1
+
+# File handling
 openpyxl>=3.1.0
+
+# Standard library (included with Python, listed for reference)
+# json, datetime, pathlib, math, hashlib, threading
