--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,24 @@
+# Framework web
 dash>=2.14.0
 dash-bootstrap-components>=1.5.0
+Flask>=2.3.0
+
+# Procesamiento de datos
 pandas>=2.0.0
 numpy>=1.24.0
+scipy>=1.10.0
+
+# Visualización
 matplotlib>=3.7.0
 plotly>=5.15.0
-kaleido>=0.2.1
+kaleido==0.2.1
+
+# Archivos Excel
 openpyxl>=3.1.0
+
+# Servidor WSGI para producción
 gunicorn>=21.2.0
-scipy>=1.10.0
+
+# Utilidades
+python-dateutil>=2.8.0
+pytz>=2023.3
