--- a/render.yaml
+++ b/render.yaml
@@ -2,12 +2,13 @@ services:
   - type: web
     name: agp-estructural
     env: python
+    region: oregon
+    plan: free
+    branch: main
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:server --bind 0.0.0.0:$PORT --workers 2 --timeout 120
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
-      - key: RENDER
-        value: true
-      - key: DEBUG
+      - key: DEBUG_MODE
         value: false
